@@ -4,6 +4,9 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/12/12
+	* Mobs now by default are "everyone's" enemy, so mobs are able to hit each another. 
+	* Moved "unsetting" the angry mode from the mob_ai to the mob_damage
+	  function, where it'll work regardless of who hits the mob.
 	* Modifed a bit the clif_change_look function, it should fix crashes with
 	  the Xmas sprite when changing maps.
 	* Fixed skills displaying a 32k damage when used while disguised. [Skotlex]
